docs: add license
docs: add license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "boda"
 version = "0.1.0"
 edition = "2024"
 repository = "https://git.sr.ht/~beleap/boda"
+license-file = "LICENSE"
 
 [dependencies]
 crossbeam-channel = "0.5.15"
