--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ crossbeam-channel = "0.5.15"
 ctrlc = "3.4.6"
 crossterm = "0.29.0"
 clap = { version = "4.5.37", features = ["derive"] }
+chrono = "0.4.40"
