--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ crossbeam-channel = "0.5.15"
 crossterm = "0.29.0"
 clap = { version = "4.5.37", features = ["derive"] }
 chrono = "0.4.40"
+ratatui = "0.29.0"
+color-eyre = "0.6.3"
