feat: impl quit
feat: impl quit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ panic = "abort"
 
 [dependencies]
 crossbeam-channel = "0.5.15"
-crossterm = "0.29.0"
+crossterm = { version = "0.29.0", features = ["event-stream"] }
 clap = { version = "4.5.37", features = ["derive"] }
 chrono = "0.4.40"
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
+time = "0.3.41"
