--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ panic = "abort"
 
 [dependencies]
 crossbeam-channel = "0.5.15"
-crossterm = "0.29.0"
+crossterm = "0.28.1"
 clap = { version = "4.5.37", features = ["derive"] }
 chrono = "0.4.40"
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
+log = { version = "0.4.27", features = ["release_max_level_info"] }
