--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ chrono = "0.4.40"
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
 log = { version = "0.4.27", features = ["release_max_level_info"] }
+rusqlite = { version = "0.35.0", features = ["bundled"] }
