--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ ratatui = "0.29.0"
 color-eyre = "0.6.3"
 log = { version = "0.4.27", features = ["release_max_level_info"] }
 rusqlite = { version = "0.35.0", features = ["bundled"] }
+ulid = "1.2.1"
